--- a/app/src/scss/Hero.scss
+++ b/app/src/scss/Hero.scss
@@ -9,8 +9,8 @@
 .hero-text-bg {
     padding: 20px;
 
-    background-color: rgba(15, 15, 15, 0.70);
-    //background-image: linear-gradient(rgba(20, 20, 20, 0.50), rgba(25, 25, 25, 0.50), rgba(20, 20, 20, 0.50));
+    background-color: #212529CC; // rgba(33, 37, 41, 0.80);
+    //background-image: linear-gradient(rgba(33, 37, 41, 0.75), rgba(10, 10, 10, 0.75), rgba(33, 37, 41, 0.75));
     border-top-left-radius: calc(0.25rem - 1px);
     border-top-right-radius: calc(0.25rem - 1px);
     border-bottom-left-radius: calc(0.25rem - 1px);
